# addpage

./: .gitignore  README.md  README.rst  pyproject.toml
addpage/: __init__.py
src/addpage/: __init__.py
src/sample/: sample.md
tests/: test_addpage.py
