[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`addpage` is a package for adding page number to PDF file."
homepage = "https://github.com/SaitoTsutomu/addpage"
license = "Apache-2.0"
name = "addpage"
readme = "README.rst"
version = "0.2.0"

[tool.poetry.dependencies]
pdfformfiller = "^0"
pypdf2 = "1.26"
python = "^3.11"
reportlab = "^4.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11"

[tool.poetry.scripts]
addpage = "addpage:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
