[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pdfformfiller>=0.4",
  "pypdf2==1.27.9",
  "reportlab>=4.2.5",
]
description = "`addpage` is a package for adding page number to PDF file."
license = {text = "Apache-2.0"}
name = "addpage"
readme = "README.md"
requires-python = ">=3.12"
version = "0.4.1"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/addpage"

[project.scripts]
addpage = "addpage:main"

[tool.uv]
dev-dependencies = []

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN001", "ANN20", "CPY", "D1", "D2", "D4", "DOC201", "E501", "N802", "N803", "N806"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
